add setDetail in payment 50%

--- a/src/views/jurisdiction/manage.html
+++ b/src/views/jurisdiction/manage.html
@@ -139,23 +139,27 @@
     </div>
     <div id="dialong-box" class="dialog-box">
       <div id="dialog-article" class="dialog-article">
-        <div class="left">
-          <div class="header">可选机构</div>
-          <div class="dialog-tree-box">
-            <ul id="cskTree1" class="dtree" data-id="0"></ul>
+        <div id="dialog-tree-fuc-box" class="dialog-tree-fuc-box">
+          <div class="left">
+            <div class="header">可选机构</div>
+            <div class="dialog-tree-box">
+              <ul id="cskTree1" class="dtree" data-id="0"></ul>
+            </div>
           </div>
-        </div>
-        <div class="center">
-          <div class="dialog-btn-box">
-            <button id="bindCl" class="layui-btn" onclick="bindCl(0)">启用班级<i class="layui-icon layui-icon-next"></i></button>
-            <button id="unboundCl" class="layui-btn"><i class="layui-icon layui-icon-prev"></i>禁用班级</button>
-            <button id="close-bind-dialog" class="layui-btn" onclick="dlb.style.display = 'none'"><i class="layui-icon layui-icon-close"></i>关闭</button>
+          <div class="center">
+            <div class="dialog-btn-box">
+              <button id="bindCl" class="layui-btn" onclick="bindCl(0)">启用班级<i
+                  class="layui-icon layui-icon-next"></i></button>
+              <button id="unboundCl" class="layui-btn"><i class="layui-icon layui-icon-prev"></i>禁用班级</button>
+              <button id="close-bind-dialog" class="layui-btn" onclick="dlb.style.display = 'none'"><i
+                  class="layui-icon layui-icon-close"></i>关闭</button>
+            </div>
           </div>
-        </div>
-        <div class="right">
-          <div class="header">已启用机构</div>
-          <div class="dialog-tree-box">
-            <ul id="cskTree2" class="dtree" data-id="-1"></ul>
+          <div class="right">
+            <div class="header">已启用机构</div>
+            <div class="dialog-tree-box">
+              <ul id="cskTree2" class="dtree" data-id="-1"></ul>
+            </div>
           </div>
         </div>
       </div>
@@ -247,6 +251,7 @@
   <script src="../../layuiadmin/modules/search.js"></script>
   <script src="../../layuiadmin/modules/change.js"></script>
   <script src="../../layuiadmin/modules/bindOrUnbound.js"></script>
+  <script src="../../layuiadmin/modules/dialog.js"></script>
 </body>
 
 
