--- a/src/layuiadmin/style/dialog.css
+++ b/src/layuiadmin/style/dialog.css
@@ -92,8 +92,28 @@
 
 .dialog-box .dialog-article .dialog-detail-fuc-box .detail-list .detail-sum {
     border-top: 1px solid #f2f2f2;
-    padding: 10px 20px;
+    padding: 10px;
     font-weight: 600;
     display: flex;
     justify-content: flex-end;
+}
+
+.dialog-box .dialog-article .dialog-set-detail-box {
+    width: 100%;
+    height: 100%;
+    min-width: 800px;
+    min-height: 600px;
+    display: none;
+}
+
+.dialog-box .dialog-article .dialog-set-detail-box .projects-box{
+    width: 100%;
+    height: calc(100% - 110px);
+    box-sizing: border-box;
+    border-bottom: 1px solid #f2f2f2;
+    overflow: auto;
+}
+
+.dialog-box .dialog-article .dialog-set-detail-box .projects-box .form-box {
+    border-bottom: none;
 }
