--- a/src/layuiadmin/style/formBox.css
+++ b/src/layuiadmin/style/formBox.css
@@ -11,13 +11,16 @@
 
 .form-box .input-box {
     box-sizing: border-box;
-    width: 300px;
+    width: 320px;
 }
 .form-box .input-box .layui-input, .layui-textarea {
     width: 180px;
 }
 .form-box .input-box .layui-form-select .layui-edge {
     right: 20px;
+}
+.form-box .input-box .layui-form-label {
+    width: 100px;
 }
 
 .btn-box {
