--- a/src/views/payment/template.html
+++ b/src/views/payment/template.html
@@ -123,7 +123,7 @@
         <div class="layui-form-item input-box">
           <label class="layui-form-label">金额</label>
           <div class="layui-input-block">
-            <input type="text" name="sum" disabled placeholder="请输入" autocomplete="off" class="layui-input">
+            <input id="changeSum" type="text" name="sum" disabled placeholder="请输入" autocomplete="off" class="layui-input">
           </div>
         </div>
         <div class="layui-form-item input-box">
@@ -134,7 +134,10 @@
           </div>
         </div>
       </div>
-      <div class="btn-box"><button class="layui-btn" onclick="changeTe()">确定</button></div>
+      <div class="btn-box">
+        <button class="layui-btn" onclick="handleSetDetail(1)">配置金额</button>
+        <button class="layui-btn" onclick="addTe()">确定</button>
+      </div>
     </div>
     <div class="table-box">
       <div class="header">模板信息</div>
