--- a/src/views/jurisdiction/manage.html
+++ b/src/views/jurisdiction/manage.html
@@ -31,7 +31,7 @@
     </div>
     <div class="add-box layui-anim layui-anim-scale" id="addBox">
       <div class="header">
-        <div>新增公众号</div>
+        <div>新增使用者</div>
         <div onclick="abox.style.display = 'none'"><i class="layui-icon layui-icon-close"></i></div>
       </div>
       <div class="form-box layui-form" lay-filter="addUserForm">
