--- a/src/views/jurisdiction/manage.html
+++ b/src/views/jurisdiction/manage.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>学生管理</title>
+  <title>用户管理</title>
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport"
@@ -22,16 +22,16 @@
     <div class="func-box">
       <div class="header">操作</div>
       <div class="article">
-        <button id="addBt" class="layui-btn"><i class="layui-icon layui-icon-add-circle"></i>新增使用者</button>
-        <button id="deleteBt" class="layui-btn"><i class="layui-icon layui-icon-delete"></i>删除使用者</button>
-        <button id="changeBt" class="layui-btn"><i class="layui-icon layui-icon-edit"></i>修改使用者</button>
-        <button id="searchBt" class="layui-btn"><i class="layui-icon layui-icon-search"></i>查找使用者</button>
-        <button id="bindBt" class="layui-btn"><i class="layui-icon layui-icon-template-1"></i>配置使用者权限</button>
+        <button id="addBt" class="layui-btn"><i class="layui-icon layui-icon-add-circle"></i>新增用户</button>
+        <button id="deleteBt" class="layui-btn"><i class="layui-icon layui-icon-delete"></i>删除用户</button>
+        <button id="changeBt" class="layui-btn"><i class="layui-icon layui-icon-edit"></i>修改用户</button>
+        <button id="searchBt" class="layui-btn"><i class="layui-icon layui-icon-search"></i>查找用户</button>
+        <button id="bindBt" class="layui-btn"><i class="layui-icon layui-icon-template-1"></i>配置学校</button>
       </div>
     </div>
     <div class="add-box layui-anim layui-anim-scale" id="addBox">
       <div class="header">
-        <div>新增使用者</div>
+        <div>新增用户</div>
         <div onclick="abox.style.display = 'none'"><i class="layui-icon layui-icon-close"></i></div>
       </div>
       <div class="form-box layui-form" lay-filter="addUserForm">
@@ -95,7 +95,7 @@
     </div>
     <div class="condition-box layui-anim layui-anim-scale" id="condition">
       <div class="header">
-        <div>查找使用者</div>
+        <div>查找用户</div>
         <div onclick="cdb.style.display = 'none'"><i class="layui-icon layui-icon-close"></i></div>
       </div>
       <div class="form-box layui-form" lay-filter="conditionForm">
@@ -132,7 +132,7 @@
       <div class="btn-box"><button class="layui-btn" onclick="searchUser()">确定</button></div>
     </div>
     <div class="table-box">
-      <div class="header">使用者信息</div>
+      <div class="header">用户信息</div>
       <div class="article">
         <table id="users-table" lay-filter="test"></table>
       </div>
