--- a/src/views/index.html
+++ b/src/views/index.html
@@ -75,7 +75,7 @@
           <ul class="layui-nav layui-nav-tree" lay-shrink="all" id="LAY-system-side-menu" lay-filter="layadmin-system-side-menu">
             <li data-name="home" class="layui-nav-item layui-nav-itemed">
               <a href="javascript:;" lay-href="home/console.html" lay-tips="主页" lay-direction="2">
-                <i class="layui-icon layui-icon-home"></i>
+                <i class="layui-icon layui-icon-chart"></i>
                 <cite>主页</cite>
               </a>
             </li>
@@ -123,6 +123,12 @@
               <a href="javascript:;" lay-href="wx/manage.html" lay-tips="微信管理" lay-direction="2">
                 <i class="layui-icon layui-icon-login-wechat" style="color: rgba(255,255,255,.7);"></i>
                 <cite>微信管理</cite>
+              </a>
+            </li>
+            <li data-name="template" class="layui-nav-item">
+              <a href="javascript:;" lay-href="school/manage.html" lay-tips="学校管理" lay-direction="2">
+                <i class="layui-icon layui-icon-home"></i>
+                <cite>学校管理</cite>
               </a>
             </li>
           </ul>
