--- a/src/views/user/login2.html
+++ b/src/views/user/login2.html
@@ -89,7 +89,7 @@
 										<a href="forget.html" class="layadmin-user-jump-change layadmin-link" style="margin-top: 7px;">忘记密码？</a>
 									</div>-->
 								<div class="layui-form-item center">
-									<button class="layui-btn layui-btn-radius loginBtn" lay-submit
+									<button class="layui-btn layui-btn-radius loginBtn" onclick="login()"
 										lay-filter="LAY-user-login-submit">登录</button>
 								</div>
 
