finishi role api

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -179,6 +179,7 @@
     index: 'lib/index' //主入口模块
   }).use('index');
   </script>
+  <script src="../layuiadmin/modules/userRole.js"></script>
 </body>
 </html>
 
