finishi api of user

--- a/src/layuiadmin/style/formBox.css
+++ b/src/layuiadmin/style/formBox.css
@@ -22,6 +22,9 @@
 .form-box .input-box .layui-form-label {
     width: 100px;
 }
+.layui-unselect dl { 
+    max-height:140px;
+}
 
 .btn-box {
     display: flex;
